@@ -5,6 +5,7 @@ The Pinup Meets Grunge Copyright can be found at the end of this file.
 == Version 2.2 ==
 = Code =
 * General Code reformatting to better meet WordPress Coding Standards
+* Added support for WordPress 4.1 `add_theme_support( 'title-tag' )`
 
 = CSS =
 * Minor corrections in the stylesheet
